Changes in 0.6
- fix some warnings
- tidy up autoconf use

Changes in 0.5
- get large file support where possible
- replacement getaddrinfo on systems that lack it
- fix compilation on MacOS X

Changes in 0.4.3
- make -s suppress summary info too
- add HTTP authentication support

Changes in 0.4.2
- fix CAN-2005-1849 for embedded zlib
- obey -s flag

Changes in 0.4.1
- security fix from zlib-1.2.2
- generate RFC 1123 date strings in HTTP requests
- include port numbers in Host headers
- be slightly more accepting in proxy URL syntax
- don't generate Accept-Ranges headers

Changes in 0.4.0
- now considered beta instead of alpha quality
- fixed incorrect 100%/done display of progress bar when cleanly disconnected before end by server
- updated autoconf/automake scripts

Changes in 0.3.3
- build in gzip in zsyncmake which produces .gz files optimised for zsync
- quickly stop downloading from a URL producing bad data
- -k option to keep the .zsync file, and redownload only when it changes
- fixes some possible crashes that could occur with unexpected remote responses

Changes in 0.3.2
- automatically decompress local seed data when this is appropriate
- progress bars with rate and ETA for all downloads
- automatically recompress downloaded file if possible
- deal better with local .zsyncs containing relative URLs

Changes in 0.3.1
- fix SEGV when downloading with no local data found
- fix failure when incomplete final block of uncompressed stream is unknown
- fix some memory leaks

Changes in 0.3.0
- fix endian check in libhash (works on FreeBSD again)
- major code reorganisation

Changes in 0.2.3
- fix crash in zsyncmake with short files
- "negative" hash table used to speed up processing

Changes in 0.2.2
- complete support for stored blocks in gzip files
- update block size recommendations in man page

Changes in 0.2.1
- fixed bug where zsync would loop if fed more than one local source file